Fixed wrong color for context menu popups (closes #88)

--- a/src/toolkit/themes/shared/zen-popup.css
+++ b/src/toolkit/themes/shared/zen-popup.css
@@ -380,6 +380,7 @@ hbox.editBMPanel_folderRow {
 menu, menuitem {
   &:where([_moz-menuactive]:not([disabled="true"])) {
     background-color: var(--button-hover-bgcolor);
+    color: var(--button-hover-color);
   }
 }
 
